# cfnc-integration-generator

./: README.md
client/: Dockerfile  dagster_cloud.yml  pyproject.toml  workspace.yaml
client/client/: __init__.py  repository.py
client/client/graphs/: __init__.py
client/client/graphs/cfnc/: __init__.py  cfnc_import_applications_from_mongo.py
client/client/jobs/: __init__.py  tags.py
client/client/jobs/cfnc/: __init__.py  cfnc_applications_import_from_mongo.py  cfnc_documents.py  cfnc_fetch_applications.py  cfnc_transcripts_import.py  translation_tables.py
client/client/ops/cfnc/: __init__.py  custom_client_cfnc_type.py  extract_custom_data.py  handle_custom_columns.py  prepare_custom_import.py  translate_custom_fields.py
client/client/ops/cfnc/translation_tables/: __init__.py  academic_loads.py  citizenship_statuses.py  config.py  education_level.py  genders.py  majors.py  races.py  student_types.py  terms.py  translation_tables_update.py
client/client/schedules/: __init__.py  cfnc_applications_import.py  cfnc_documents_import.py  cfnc_mongo_to_element_import.py
client/client/sensors/: __init__.py  cfnc_transcript_import.py
client/client/src/: __init__.py  integration_start_date.py  secrets_config.py
