[tool.poetry]
name = "client"
version = "1.3.13"
description = ""
authors = ["mict0 <milost1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
element = "^1.3.13"
shared-resources = "^1.3.13"
ethos-integration = "^1.3.13"
dynamodb = "^1.3.13"
mongodb = "^1.3.13"
cfnc = "^1.3.13"
translator = "^1.3.13"
slack = "^1.3.13"
sentry = "^1.3.13"
job_retry = "^1.3.13"


[tool.poetry.dev-dependencies]
python = "^3.9"
ethos-integration = {path = "../../libs/ethos_integration", develop = true}
cfnc = {path = "../../libs/cfnc", develop = true}
element = {path = "../../libs/element", develop = true}
shared-resources = {path = "../../libs/shared_resources", develop = true}
mongodb = {path = "../../libs/mongodb", develop = true}
sentry = {path = "../../libs/sentry", develop = true}
slack = {path = "../../libs/slack", develop = true}
translator = {path = "../../libs/translator", develop = true}
dynamodb = {path = "../../libs/dynamodb", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
